# hands-on-lab-agent-framework-with-microsoft-foundry

./: .gitignore  README.md  SUPPORT.md  azure.yaml
docs/: workshop.md
docs/assets/: architecture.drawio
infra/: foundry.tf  foundry_models.tf  froundry_project.tf  locals.tf  providers.tf  roles.tf
solutions/: lab_1_console.py  lab_1_dev_ui.py  lab_2.py  lab_3.py  lab_4.py  lab_5.py  lab_6.py  lab_7.py  lab_8.py
src/: .env.template  create_data.py  main copy.py  main.py  main_solution.py  pyproject.toml
src-hosted/: agent.yaml  eval.yaml  main.py  requirements.txt
src-hosted/.agent_configs/baseline/: instructions.md
src-hosted/datasets/issue-analyzer-hosted-smoke/: issue-analyzer-hosted-smoke_dg.jsonl
src-hosted/evaluators/issue-analyzer-hosted-smoke/: rubric_dimensions.json
src/tools/: time_per_issue_tools.py
